[gd_scene load_steps=2 format=3 uid="uid://bs5pj0f54n7ib"]

[ext_resource type="Script" path="res://scenes/MiniGameStats.gd" id="1"]

[node name="MiniGameStats" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 54.0
size_flags_horizontal = 3
script = ExtResource("1")

[node name="GameLogo" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 4
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Number of time played: "

[node name="NumTimesPlayed" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Last played:"

[node name="LastPlayed" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "never"
